src/css/pages/home.scss
/* ... */
.instagram {
  position: relative;

  background-color: $tuf-color-primary-dark;

  // &:before {
  //   position: absolute;

  //   top: rem(-50);
  //   left: 0;

  //   display: block;
  //   content: '';

  //   width: 100%;
  //   height: rem(400);

  //   background: linear-gradient(
  //     180deg,
  //     transparentize($tuf-color-primary ,0) 0%,
  //     transparentize($tuf-color-primary-dark, 0) 60%
  //   );
  // }

  .tuf-section-title {
    color: $tuf-color-primary-light;
  }

  &__list {
    position: relative;

    display: flex;

    flex-direction: row;

    justify-content: center;

    width: 100%;

    margin: 0 auto;

    margin-bottom: rem(48);

    &__item {
      width: calc((100% / 3));

      max-width: rem(300);

      margin: rem(4);

      @media (min-width: rem(768)) {
        margin: rem(15);
      }

      a {
        display: block;
        width: 100%;
        height: 100%;

        background-image: attr(data-image-src url);
        background-size: cover;
        background-position: center center;

        transition: opacity .25s ease-in-out;

        &:before {
          display: block;
          width: 100%;
          padding-top: 100%;

          content: '';
        }
      }

      a:hover,
      a:focus {
        outline: none;
        opacity: .7;
      }
    }
  }
}

